@@ -16,6 +16,7 @@ Version 0.25.0:
 - crt/stdio.bi now declares rename() instead of rename_()
 - Property methods using an explicit ALIAS now respect that alias and do not append __get__ or __set__ anymore
 - #637: Assert[Warn]() messages go to stderr now, rather than to the FB screen (because that might be about to be closed)
+- LBound/UBound( array, 0 ) is no longer the same as LBound/UBound( array, 1 ), since the dimension count is 1-based, 0 is out-of-bounds
 
 [added]
 - VIRTUAL and ABSTRACT methods (including virtual destructors) in UDTs extending OBJECT, which can be overridden by methods in derived UDTs, provided the same method name and signature is used
